# excel-export

./: .gitignore  app.py  extract_cotizacion.py  extract_cotizacion.spec  insert_cotizacion.py  insert_cotizacion.spec  main.py  models.py  requirements.txt  run.py  sheets_wrapper.spec  xlsx_manager.py
backend/: extract_cotizacion.py  extract_wrapper.py  insert_cotizacion.py  insert_wrapper.py  models.py  sheets_wrapper.py  xlsx_manager.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
templates/: base.html  excel.html  index.html  preview.html  result.html
uploads/: cotizacion.docx  destino.xlsx
