[package]
name = "melectra-app"
version = "0.1.0"
description = "Extractor de cotizaciones Melectra"
authors = ["Melectra"]
edition = "2021"

[lib]
name = "melectra_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

